# FridgeChef

./: .coverage  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  FIRST_TIME_SETUP.bat  HOW_TO_START.txt  IMPLEMENTATION_PLAN.md  MOBILE_IMPLEMENTATION_PLAN.md  MasterClass_AppDevelopment.html  README.md  SECURITY.md  START_APP.bat  create_icons.py  docker-compose.yml  fridgechef.db  render.yaml  setup.bat  start_backend.bat  start_frontend.bat  test.db  ⭐ README - START HERE.txt
.claude/: settings.local.json
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  check_connection.py  check_endpoints.py  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  start.sh  test_groq_vision.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_password_reset.py  003_add_performance_indexes.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py  pantry.py  password_reset.py  recipes.py  scans.py  shopping_lists.py  user.py
backend/app/core/: limiter.py  security.py
backend/app/middleware/: exception_handlers.py  logging.py
backend/app/models/: __init__.py  pantry.py  recipe.py  scan.py  shopping_list.py  user.py
backend/app/schemas/: auth.py  pantry.py  password_reset.py  recipe.py  scan.py  shopping_list.py  user.py
backend/app/services/: auth.py  categorization.py  gemini.py  groq_service.py  image.py
backend/app/utils/: logger.py
backend/tests/: conftest.py  test_auth.py  test_categorization.py  test_lists.py  test_pantry.py  test_recipes.py  test_scans.py  test_security.py  test_user_preferences.py
frontend/: .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
(+77 files in other folders)
