[project]
name = "fridgechef-backend"
version = "1.3.0"
description = "FridgeChef API - AI-powered recipe suggestions"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "N805",   # first argument of a method should be named 'self' (Pydantic)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"alembic/*" = ["E402", "F401"]  # Allow imports not at top
"app/main.py" = ["E402"]  # FastAPI app must be created before importing routers

[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Too noisy with SQLAlchemy
warn_unused_ignores = true
disallow_untyped_defs = false  # Gradually enable
ignore_missing_imports = true  # Many libs don't have type stubs
# SQLAlchemy plugin would help but requires additional setup
# For now, disable strict mode for ORM code
[[tool.mypy.overrides]]
module = ["app.api.v1.endpoints.*", "app.services.*"]
disable_error_code = ["arg-type", "assignment", "union-attr", "attr-defined", "var-annotated"]

[[tool.mypy.overrides]]
module = ["app.main", "app.config"]
disable_error_code = ["arg-type", "call-arg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing"
